# mariadbsqlindexer

./: CMakeLists.txt  README.md  main.c  sha256.c  sha256.h  sql_cli.c  sql_cli.h  sql_indexer.c  sql_indexer.h  sql_utils.c  sql_utils.h
notcurses/: CMakeLists.txt  string_selector.c
